<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/texViewPoids"
            android:textColor="#FF0000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_poids"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textViewTaille"
            android:textColor="#FF0000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_taille"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/radio_metre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metre" />

                <RadioButton
                    android:id="@+id/radio_centimetre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimetre" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/commentaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commentaire" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calcul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculer_lmc" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RESET" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat"
            />
        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/comment_result"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>